--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -8,7 +8,7 @@ on:
 name: firefox
 jobs:
   sync:
-    runs-on: ubuntu-20.04
+    runs-on: self-hosted
     env:
       TZ: Europe/Busingen
     steps:
@@ -52,7 +52,7 @@ jobs:
           free -m
         
   push:
-    runs-on: ubuntu-20.04
+    runs-on: self-hosted
     env:
       TZ: Europe/Busingen
     steps:
